--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="Serving LLMs on an RTX4090 with Sequoia">
-  <meta property="og:title" content="Sequoia"/>
-  <meta property="og:description" content="Serving Llama2-70B on an RTX4090 with Sequoia"/>
+  <meta name="description" content="MagicPIG: LSH Sampling for Efficient LLM Generation">
+  <meta property="og:title" content="MagicPIG"/>
+  <meta property="og:description" content="LSH Sampling for Efficient LLM Generation"/>
   <meta property="og:url" content="https://dreaming-panda.github.io/Sequoia-Webpage/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/images/proj_fig.png" />
