--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
   <meta property="og:image:height" content="630"/>
 
 
-  <meta name="twitter:title" content="Sequoia">
-  <meta name="twitter:description" content="Serving Llama2-70B on an RTX4090 with Sequoia">
+  <meta name="twitter:title" content="MagicPIG">
+  <meta name="twitter:description" content="LSH Sampling for Efficient LLM Generation">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/proj_fig.png">
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="Speculative Decoding">
+  <meta name="keywords" content="Locality-Sensitive Hashing">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Serving LLMs on an RTX4090 with Sequoia</title>
+  <title>LSH Sampling for Efficient LLM Generation</title>
   <link rel="icon" type="image/x-icon" href="static/images/colorful_sequoia.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
